k8s/base/app-b/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/name: app-b
    app.kubernetes.io/part-of: schwab-assessment
  name: app-b
  namespace: assessment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-b
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: app-b
        app.kubernetes.io/part-of: schwab-assessment
    spec:
      containers:
        - args:
            - --port=8080
          image: docker.io/traefik/whoami@sha256:c4717a8d1f0134a7444e24f881160e033991f23027c6c5a9a3f8fd22e70d1d44
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
          name: app-b
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: http
            periodSeconds: 2
            timeoutSeconds: 2
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: app-b
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: app-b
          maxSkew: 1
          minDomains: 2
          nodeTaintsPolicy: Honor
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
        - labelSelector:
            matchLabels:
              app.kubernetes.io/name: app-b
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
