k8s/base/app-b/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: app-b
    app.kubernetes.io/part-of: schwab-assessment
  name: app-b
  namespace: assessment
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: app-b
  type: ClusterIP
