k8s/base/app-b/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-b-ingress
  namespace: assessment
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: assessment
        - ipBlock:
            cidr: 130.211.0.0/22
        - ipBlock:
            cidr: 35.191.0.0/16
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: app-b
  policyTypes:
    - Ingress
